# kioti-ecu-sniffer

./: .gitignore  CHANGELOG_20250929_164500.md  CLAUDE.md  CONNECTION_MODULE_INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup_connection.sh
.github/: dependabot.yml
.github/workflows/: license-check.yml  python-package.yml  python-quality.yml  security-scan.yml  shellcheck.yml
Data Capture/: DATA_CAPTURE_INSTRUCTIONS.md  data_capture.py  setup_data_capture.sh
ECU Connection/: ecu_connection.py  setup_connection.sh
Protocol Discovery/: PROTOCOL_DISCOVERY_INSTRUCTIONS.md  protocol_discovery.py  setup_protocol_discovery.sh
changelogs/: CHANGELOG_20250929_153345.md  CHANGELOG_20250929_161200.md  CHANGELOG_20250929_172800.md  CHANGELOG_20250929_181859.md
